# RelExt

./: .newmod  CMakeLists.txt  DDetection.cpp  DDetection.hpp  FI.csv  README.md  model  tacH2H2.csv  tacHH.csv  tacHH2.csv  tacZZ.csv  tacfi.csv  tacfi1.csv
CH_modfiles/: extlib1.mdl  func1.mdl2  prtcls1.mdl  vars1.mdl
base_model/: main.cpp
base_model/include/: init.hpp
base_model/sources/: CMakeLists.txt
base_model/sources/amp2s/: CMakeLists.txt
dataInput/: FI_test.csv  ddp.csv  inerd.csv  micro_cxsm.csv  micro_ddp.csv  mldmTest.csv  relext_test.csv  test1.csv  test2.csv
dataOutput/: bmd5_output.csv  cpvdm_base.csv  cpvdm_scan.csv  cpvdm_tokenized.csv  cxsm_base.csv  cxsm_comp.csv  cxsm_fast.csv  cxsm_nlo_test.csv  cxsm_nlo_test2.csv  cxsm_nlo_test3.csv  cxsm_nlo_test4.csv  cxsm_scan.csv  cxsm_search.csv  cxsm_tokenized.csv  cxsm_width.csv  faster.csv  k.csv  new.csv  our_cpvdm.csv  our_cxsm.csv  our_ddp.csv  our_hh.csv  our_tac.csv  scan_cxsm.csv  scan_ddp.csv  t.csv  test.csv  testoupt.csv  testout.csv  testoutp.csv
include/: EffDof.hpp  EffDofmic.hpp  analysis.hpp  beq.hpp  beq_solver.hpp  boltzmann_equations.hpp  data_structures.hpp  error_tracker.hpp  general_model.hpp  hyper_parameters.hpp  integration_methods.hpp  macros.hpp  maincl.hpp  mass_run.hpp  montecarlo.hpp  ntools.hpp  parameters.h  readdata.hpp  readdata1.hpp  relic_ops.hpp  result_error_pair.hpp  search.hpp  tac.hpp  tactools.hpp  utils.hpp  vars.hpp  width.hpp
include/interface/: CollierLTCPP.h
include/nlo/: Dof.h  beqs.h  beqsolver.h  parameters.h
include/numerical/: Dopr853_consts.hpp  ODE_base.hpp  StepperDopr853.hpp  integration_methods.hpp  root_finding.hpp
mathematica/: FR_to_CH_FA.m  amp2cpp.m  amp2cpp_v2.m  amp2cpp_v2_new.m  gen_init.m
md_DDP/: main.cpp  model.hpp
md_DDP/FR_modfiles/: DDP.fr  Lagrangian.fr  Parameters.fr  SMParts.fr  Scalars.fr
md_DDP/FR_modfiles/CH_modfiles/: extlib1.mdl  func1.mdl  func1.mdl2  lgrng1.mdl  prtcls1.mdl  vars1.mdl
md_DDP/FR_modfiles/FA_modfiles/: FA_modfiles.mod  FA_modfiles.pars
md_DDP/sources/: CMakeLists.txt  calcwidths.cpp  init.cpp  loadparameters.cpp  loadtokens.cpp  model.cpp  parametermap.cpp  prtcls.cpp
md_DDP/sources/amp2s/: A0A0flux.cpp  A0Hchflux.cpp  CMakeLists.txt  H3A0flux.cpp  H3H3flux.cpp  H3Hchflux.cpp  HchHchflux.cpp  allA0A0.cpp  allA0Hch.cpp  allH3A0.cpp  allH3H3.cpp  allH3Hch.cpp  allHchHch.cpp  totalWH1.cpp  totalWH2.cpp
md_NMSSM/: main.cpp  model.hpp
md_NMSSM/FR_modfiles/CH_modfiles/: func1.mdl  lgrng1.mdl  prtcls1.mdl  vars1.mdl
md_NMSSM/FR_modfiles/FA_modfiles/: FA_modfiles.m  FA_modfiles.mod
md_NMSSM/sources/: CMakeLists.txt  calcwidths.cpp  conditions.cpp  init.cpp  loadparameters.cpp  loadtokens.cpp  model.cpp  parametermap.cpp  prtcls.cpp
md_NMSSM/sources/amp2s/: C1C1flux.cpp  C1C2flux.cpp  C1c1flux.cpp  C1c2flux.cpp  C2C2flux.cpp  C2c2flux.cpp  CMakeLists.txt  L_b.cpp  L_c.cpp  L_d.cpp  L_s.cpp  L_t.cpp  L_u.cpp  Lambda_b.cpp  Lambda_c.cpp  Lambda_d.cpp  Lambda_s.cpp  Lambda_t.cpp  Lambda_u.cpp  N1C1flux.cpp  N1C2flux.cpp  N1N1flux.cpp  N1N2flux.cpp  N1N3flux.cpp  (+52 more)
md_TRSM/: main.cpp
md_TRSM/FR_modfiles/: SMParts.fr  Scalars.fr  TRSM.fr
md_TRSM/amp2s/: allamp2s.hpp  alldecays.hpp
md_TRSM/include/: declarations.hpp  init.hpp
md_TRSM/sources/: CMakeLists.txt  declarations.cpp  init.cpp  parmap.cpp  procinfo.cpp  yeq.cpp
md_bmd5/: main.cpp  model.hpp
md_bmd5/FR_modfiles/: FieldsDark.fr  FieldsSM.fr  GaugeGroup.fr  Indices.fr  Lagrangian.fr  ParamsDark.fr  ParamsSM.fr  bdm.fr
md_bmd5/sources/: CMakeLists.txt  calcwidths.cpp  conditions.cpp  init.cpp  loadparameters.cpp  loadtokens.cpp  model.cpp  parametermap.cpp  prtcls.cpp
md_cpvdm/: main.cpp  model.hpp
md_cpvdm/FR_modfiles/: CPVDM.fr  Lagrangian.fr  Parameters.fr  SMParts.fr  Scalars.fr
md_cpvdm/amp2s/: allamp2s.hpp
md_cpvdm/include/: declarations.hpp
md_cpvdm/sources/: CMakeLists.txt  calcwidths.cpp  conditions.cpp  declarations.cpp  init.cpp  loadparameters.cpp  loadtokens.cpp  model.cpp  parametermap.cpp  parmap.cpp  procinfo.cpp  prtcls.cpp  yeq.cpp
md_cxsm/: main.cpp  model.hpp
md_cxsm/FR_modfiles/: CxSM_JV_mod.fr
md_cxsm/amp2s/: allamp2s.hpp  alldecays.hpp
md_cxsm/include/: declarations.hpp  init.hpp
md_cxsm/sources/: A1A1flux.cpp  CMakeLists.txt  allA1A1.cpp  calcwidths.cpp  declarations.cpp  init.cpp  loadCTs.cpp  loadparameters.cpp  loadparamters.cpp  loadtokens.cpp  model.cpp  parametermap.cpp  parmap.cpp  procinfo.cpp  prtcls.cpp  yeq.cpp
md_inertd/: main.cpp
md_inertd/FR_modfiles/: GaugeGroup.fr  InertDoublet.fr  Lagrangian.fr  Parameters.fr  SMParts.fr  Scalars.fr
md_inertd/amp2s/: allamp2s.hpp
md_inertd/include/: declarations.hpp  init.hpp
md_inertd/sources/: CMakeLists.txt  declarations.cpp  init.cpp  procinfo.cpp  yeq.cpp
md_mldm/: gen_amps  main.cpp
md_mldm/FR_modfiles/: GaugeGroup_real.fr  Lagrangian_real.fr  MLDM_real.fr  NewParticles_real.fr  Parameters_real.fr  SMParts_real.fr
md_mldm/amp2s/: allamp2s.hpp
md_mldm/include/: declarations.hpp
md_mldm/sources/: CMakeLists.txt  declarations.cpp  init.cpp  procinfo.cpp  yeq.cpp
md_model/sources/: conditions.cpp
md_trsm/: main.cpp  model.hpp
md_trsm/FR_modfiles/: GaugeGroup.fr  Lagrangian.fr  Massless.rst  Parameters.fr  Scalars.fr
md_trsm/sources/: CMakeLists.txt  calcwidths.cpp  init.cpp  loadCTs.cpp  loadparameters.cpp  loadtokens.cpp  model.cpp  parametermap.cpp  prtcls.cpp
numdata/: EffDoF.h  EffDoF_micro.h  H0H0GG.txt  test.txt
settings/: DDP.sg  bmd5.sg  cpvdm.sg  cxsm.sg  model.sg  test.sg  test2.sg  trsm.sg
settings/examples/: cpvdm_example1.sg  cpvdm_example2.sg  cpvdm_example3.sg  cxsm_example1.sg
sources/: CMakeLists.txt  EffDof.cpp  EffDofmic.cpp  ODE_base.cpp  analysis.cpp  beq.cpp  beq_solver.cpp  boltzmann_equations.cpp  data_structures.cpp  error_tracker.cpp  general_model.cpp  hyper_parameters.cpp  maincl.cpp  mass_run.cpp  montecarlo.cpp  ntools.cpp  readdata.cpp  readdata1.cpp  relic_ops.cpp  result_error_pair.cpp  root_finding.cpp  search.cpp  tac.cpp  tactools.cpp  utils.cpp  vars.cpp  width.cpp
(+160 files in other folders)
